--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav.css">
     <title>Restaurant</title>
 </head>
@@ -27,5 +29,22 @@
         </div>
     </header>
 
+    <main class="productlist">
+        <section id="starter">
+            <h2>Starter</h2>
+            <article class="product">
+                <img src="imgs/small/rodbede-cabanossi-sm.jpg" alt="" />
+                <section class="productbody">
+                    <h3 class="data_name">Cabanossi med rødbedecreme og løg</h3>
+                    <p>Cabanossi med rødbedecreme og creme er egentlig en forret, men kammerat Vladimir elskede denne ret så højt, at han forbød restauranter i Krigien at sælge det som andet end en hovedret. Vi anbefaler det dog som forret, inden en god Bortsjs. Skylles helst ned med vodka.
+                    </p>
+                    <h4 class="data_price">49,-</h4>
+                    <button>See details</button>
+                </section>
+            </article>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
+
 </html>
