vegetarian, if conditons

--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
             <template id="productTemplate">
                 <article class="product">
                     <img src="imgs/small/rodbede-cabanossi-sm.jpg" alt="" />
+                    <div class="icons">
+                     <img class="vegetarian hidden" src="imgs/vegetarian.svg">
+                    </div>
                     <section class="productbody">
                         <h3 class="data_name">Cabanossi med rødbedecreme og løg</h3>
                         <p>Cabanossi med rødbedecreme og creme er egentlig en forret, men kammerat Vladimir elskede denne ret så højt, at han forbød restauranter i Krigien at sælge det som andet end en hovedret. Vi anbefaler det dog som forret, inden en god Bortsjs. Skylles helst ned med vodka.
                         </p>
                         <h4 class="data_price">49,-</h4>
+                        <h4 class="data_discount">DISC,-</h4>
+                        
                         <button>See details</button>
                     </section>
                 </article>
