--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         <div class="hero-image">
         </div>
     </header>
-
+    <details>
+        <summary>Filters</summary>
+        <button id="veggiefilter">Veggie dishes</button>
+    </details>
     <main class="productlist">
         <section id="starter">
             <h2>Starter</h2>
@@ -36,7 +39,7 @@
                 <article class="product">
                     <img src="imgs/small/rodbede-cabanossi-sm.jpg" alt="" />
                     <div class="icons">
-                     <img class="vegetarian hidden" src="imgs/vegetarian.svg">
+                        <img class="vegetarian hidden" src="imgs/vegetarian.svg">
                     </div>
                     <section class="productbody">
                         <h3 class="data_name">Cabanossi med rødbedecreme og løg</h3>
@@ -44,7 +47,7 @@
                         </p>
                         <h4 class="data_price">49,-</h4>
                         <h4 class="data_discount">DISC,-</h4>
-                        
+
                         <button>See details</button>
                     </section>
                 </article>
