nav styling changed

--- a/index.html
+++ b/index.html
@@ -6,32 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="nav.css">
     <title>Restaurant</title>
 </head>
 
 <body>
-    <header>
-        <div id="navigation">
-            <div id="container">
-
-                <ul>
-                    <li><a class="nav-text" href="index.html">HOME</a></li>
-                    <li><a class="nav-text" href="">MENU</a></li>
-                    <li><a class="nav-text" href="">CONTACT</a></li>
-                    <li><a class="nav-text" href="">DELIVERY</a></li>
-
-                </ul>
-
-            </div>
+    <!-- Nagigation -->
+    <header id="header">
+       <!-- <div class="hero-image">
+            <img src="imgs/hero-img2.jpg">
         </div>
-        <div class="hero-image">
-        </div>
+        -->
+        <nav>
+            <a href="#">PETROGRAD</a>
+        </nav>
     </header>
     <details>
         <summary>Filters</summary>
         <button id="veggiefilter">Veggie dishes</button>
+        <button id="alcoholfilter">Non-alcoholic dishes</button>
     </details>
+
     <main class="productlist">
         <section id="starter">
             <h2>Starter</h2>
