--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
     <title>Restaurant</title>
 </head>
 
@@ -48,7 +48,10 @@
         </template>
 
     </main>
-    <div class="modal-background">
+      <footer>
+    <p>Copyright &copy; Antonia</p>
+  </footer>
+    <div class="modal-background hide">
         <div class="modal-content">
             <h3 class="modal-name">NAME</h3>
             <img src="" alt="" class="modal-image" />
